// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tree-shake test A 1`] = `
{
  "errors": [],
  "nbOutputFiles": 1,
  "output": "// dist/index.js
function getRandomNumber(min = 0, max = 100) {
  return Math.floor(Math.random() * (max - min + 1) + min);
}

// <stdin>
console.log("tree-shaking test A, only using getRandomNumber", getRandomNumber(1, 10));
",
  "warnings": [],
}
`;

exports[`tree-shake test B 1`] = `
{
  "errors": [],
  "nbOutputFiles": 1,
  "output": "// dist/environment-B2F7H_Ns.js
function pickOne(items) {
  return items[Math.floor(Math.random() * items.length)];
}
function getRandomString() {
  const strings = "Bar Alto,Sin Seguritat,Lorem Ipsum,Ciao,Sit dolor,Por erestet,Tchu la Comida,Amet Inn,Aqualeris baked,Bouquet,Zu Amarillo,Ploject,Ruhe animals,Mah Plizure,Baacon pasty,Vinci mador,Alan Awake,Malohe Sutur,A priore sur,Quel memento,Kalitat arae".split(
    ","
  );
  return String(pickOne(strings));
}

// dist/index.js
function getRandomNumber(min = 0, max = 100) {
  return Math.floor(Math.random() * (max - min + 1) + min);
}

// <stdin>
console.log("tree-shaking test B, using getRandomNumber and getRandomString", getRandomNumber(1, 10), getRandomString(10));
",
  "warnings": [],
}
`;

exports[`tree-shake test C 1`] = `
{
  "errors": [],
  "nbOutputFiles": 1,
  "output": "// dist/environment-B2F7H_Ns.js
var nbMsInSecond = 1e3;
var nbMsInMinute = 6e4;
var nbMsInHour = 36e5;
var nbMsInDay = 864e5;
var nbMsInWeek = 6048e5;
var nbMsInMonth = 2592e6;
var nbMsInYear = 31536e6;

// dist/index.js
var timeAgoTuples = [
  [nbMsInMinute, nbMsInSecond, "second"],
  [nbMsInHour, nbMsInMinute, "minute"],
  [nbMsInDay, nbMsInHour, "hour"],
  [nbMsInWeek, nbMsInDay, "day"],
  [nbMsInMonth, nbMsInWeek, "week"],
  [nbMsInYear, nbMsInMonth, "month"]
];
function readableTimeAgo(input, language = "en") {
  const rtf = new Intl.RelativeTimeFormat(language, { numeric: "auto" });
  const ms = typeof input === "number" ? input : Date.now() - input.getTime();
  for (const [threshold, divisor, unit] of timeAgoTuples) if (ms < threshold) return rtf.format(-Math.floor(ms / divisor), unit);
  return rtf.format(-Math.floor(ms / nbMsInYear), "year");
}

// <stdin>
console.log("tree-shaking test C, only using readableTimeAgo", readableTimeAgo());
",
  "warnings": [],
}
`;

exports[`tree-shake test D 1`] = `
{
  "errors": [],
  "nbOutputFiles": 1,
  "output": "// dist/index.js
function toastHide(element, delay = 200) {
  element.style.transform = "translateX(300px)";
  setTimeout(() => {
    element.remove();
  }, delay);
}
function toastShow(element, delay = 100) {
  document.body.append(element);
  setTimeout(() => {
    element.style.transform = "translateX(0)";
  }, delay);
}
function toastAdd(type, message = "", delay = 0, padding = 20) {
  const element = document.createElement("div");
  element.setAttribute("class", "shu-toast");
  const last = document.querySelector(".shu-toast:nth-last-child(1 of .shu-toast)")?.getBoundingClientRect().top;
  const bottom = last === void 0 ? 0 : window.innerHeight - last;
  const background = type === "success" ? "forestgreen" : "firebrick";
  const icon = type === "success" ? "\\u2714" : "\\u2716";
  element.style = \`position: fixed; display: flex; align-items: center; gap: 8px; bottom: \${bottom + padding}px; right: 20px; z-index: 99999; padding: 5px 14px 6px 10px; background-color: \${background}; color: white; border-radius: 7px; box-shadow: 0 0 1rem rgba(0, 0, 0, 0.5); font-size: 18px; transition: transform 0.2s ease-in-out; transform: translateX(300px);\`;
  element.innerHTML = \`<span style="border-radius: 50%; border: 1px solid #ffffff90; width: 20px; height: 20px; text-align: center; font-size: 12px;">\${icon}</span><span style="margin-top: -1px;">\${message}</span>\`;
  toastShow(element);
  if (delay > 0)
    setTimeout(() => {
      toastHide(element);
    }, delay);
}
function toastSuccess(message, delay = 2e3) {
  toastAdd("success", message, delay);
}

// <stdin>
console.log("tree-shaking test D, using toastSuccess", toastSuccess("my message"));
",
  "warnings": [],
}
`;
